# HawkwardJournalsAI

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md
AgentDocs/: AIFIXSUGGESTIONS.md  AIToolssuggestions.md  AIpromptupdatesuggestion.md  HandoverState.md  HawkwardJournalAI_MASTER_SPEC_v1.6.md  HawkwardJournalAI_SPEC_ADDENDUM_v1.7.md  HowAiShouldBehave.md  P-00_AGENTS.md  P-01_research_review_response_process.md  P-02_getting_unstuck_prompts.md  P-03_self_evaluation_prompts.md  P-04_debugging_prompts.md  P-05_accuracy_checking_prompts.md  PersonalLifeOS_MASTER_SPEC_v1.6.md  Phase3reviewH.md  TestArch.md  aiimprovementplan.md
src/: index.html
src-tauri/: Cargo.toml  build_verbose_full.txt  check_output.txt  full_test_output.txt  memory_test_output.txt  output.txt  tauri.conf.json  test_output.txt
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql  002_fts_triggers.sql  004_field_expansion.sql  006_projects.sql  006_user_profile.sql  007_analytical_reports.sql  008_ai_analysis_fields.sql  009_fix_proposed_outcome.sql  010_ai_pinned_memory.sql
src-tauri/permissions/: journal.json
src-tauri/src/: error.rs  events.rs  lib.rs  logger.rs  main.rs
src-tauri/src/ai/: analysis.rs  client.rs  companion.rs  fallback.rs  memory.rs  mod.rs  prompt.rs  tokens.rs  tools.rs
src-tauri/src/backup/: export.rs  manual.rs  mod.rs
src-tauri/src/db/: ai.rs  audit.rs  init.rs  journal.rs  migrations.rs  mod.rs  paths.rs  profile.rs  projects.rs  reports.rs  settings.rs  tasks.rs  trash.rs
src-tauri/src/scheduler/: mod.rs  recurrence.rs  reminders.rs  weekly_report.rs
src/js/: ai-sidebar.js  app.js  ipc.js  notifications.js
src/js/tabs/: ai.js  journal.js  memory.js  reports.js  settings.js  tasks.js
src/styles/: ai-chat.css  base.css  components.css  layout.css  reports.css  tasks.css  toast.css
src/styles/themes/: dark.css  light.css
src/views/: memory.html
