[package]
name = "hawkward-journal-ai"
version = "0.1.0"
edition = "2021"

[lib]
name = "hawkward_journal_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = ["tray-icon"] }
tauri-plugin-fs           = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart    = "2"
rusqlite                  = { version = "0.31", features = ["bundled-full"] }
tokio                     = { version = "1", features = ["full"] }
reqwest                   = { version = "0.12", features = ["json", "stream"] }
serde                     = { version = "1", features = ["derive"] }
serde_json                = "1"
chrono                    = { version = "0.4", features = ["serde"] }
uuid                      = { version = "1", features = ["v4"] }
tracing                   = "0.1"
tracing-subscriber        = { version = "0.3", features = ["env-filter"] }
regex                     = "1"
zip                       = "2"
dirs                      = "5"
sysinfo                   = "0.30"
fxhash                    = "0.2"
futures-util = "0.3.32"
tiktoken-rs   = "0.6"

[dev-dependencies]
wiremock = "0.6"
tracing-test = "0.2"
tempfile = "3"
